# micro-todo-analytics

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yaml  jsconfig.json  package-lock.json  package.json  pyproject.toml
protobuf/v1/: analytics.proto  health.proto  item.proto  user.proto
src/api/: main.mjs  settings.mjs
src/api/adapters/: auth.mjs  index.mjs  task.mjs
src/api/conf/: globalSettings.mjs  index.mjs
src/api/controllers/: accounts.mjs  index.mjs  tasks.mjs
src/api/core/: exceptions.mjs  express.mjs
src/api/core/handlers/: express.mjs
src/api/core/management/: index.mjs
src/api/core/management/commands/: index.mjs  runserver.mjs
src/api/protobuf/client/: index.mjs
src/api/protobuf/client/auth/: health.mjs  index.mjs  user.mjs
src/api/protobuf/client/task/: health.mjs  index.mjs  item.mjs
src/api/schema/: index.mjs  typeDefs.graphql
src/api/schema/resolvers/: index.mjs
src/api/schema/resolvers/enums/: index.mjs  status.mjs
src/api/schema/resolvers/mutation/: auth.mjs  index.mjs  task.mjs
src/api/schema/resolvers/query/: auth.mjs  index.mjs  task.mjs
src/api/schema/resolvers/scalars/: datetime.mjs  index.mjs
src/api/services/: accounts.mjs  index.mjs  tasks.mjs
src/api/urls/: graphql.mjs  index.mjs
src/api/urls/api/: index.mjs
src/api/urls/api/v1/: accounts.mjs  index.mjs  tasks.mjs
src/api/utils/: call.mjs  timezone.mjs  transform.mjs
src/api/validators/: accounts.mjs  index.mjs
src/auth/: __init__ copy.py  __init__.py  __main__.py  health.py  registry.py  settings.py
src/auth/conf/: __init__.py
src/auth/core/: grpc.py
src/auth/core/handlers/: grpc.py
src/auth/core/management/: __init__.py
src/auth/core/management/commands/: __init__.py  build.py  loaddata.py  runserver.py  shell.py
src/auth/db/: __init__.py  engines.py  sessions.py
src/auth/db/models/: __init__.py
src/auth/interceptors/: __init__.py  authentication.py  logging.py
src/auth/migrations/: env.py
src/auth/migrations/versions/: 2026_06_06_1306-ea99152a81a6_initial_migration.py  2026_06_23_1918-f8f057e11a89_initial_migration.py
src/auth/models/: __init__.py  token.py  user.py
src/auth/processors/: __init__.py  health.py  user.py
src/auth/repositories/: __init__.py  health.py  user.py
src/auth/services/: __init__.py  health.py  user.py
src/auth/utils/: security.py  timezone.py
src/task/: celery.mjs  main.mjs  registry.mjs  settings.mjs
src/task/conf/: index.mjs
src/task/core/: grpc.mjs
src/task/core/broker/: index.mjs  rabbitmq.mjs
src/task/core/handlers/: grpc.mjs
src/task/core/management/: index.mjs
src/task/core/management/commands/: index.mjs  runserver.mjs  shell.mjs
src/task/db/: connections.mjs  index.mjs
src/task/interceptors/: auth.mjs  index.mjs  logging.mjs
src/task/models/: index.mjs  item.mjs
src/task/processors/: health.mjs  index.mjs  item.mjs
src/task/protobuf/client/: index.mjs
src/task/protobuf/client/auth/: health.mjs  index.mjs  user.mjs
src/task/protobuf/server/: health.mjs  index.mjs  item.mjs
src/task/repositories/: health.mjs  index.mjs  item.mjs
src/task/services/: health.mjs  index.mjs  item.mjs
src/task/utils/: date.mjs  timezone.mjs  transform.mjs
src/tracker/: __init__.py  __main__.py  celery.py  registry.py  settings.py
src/tracker/conf/: __init__.py  global_settings.py
src/tracker/core/: grpc.py
src/tracker/core/handlers/: grpc.py
src/tracker/core/management/: __init__.py
src/tracker/core/management/commands/: __init__.py  build.py  runserver.py
src/tracker/db/: __init__.py  engines.py  sessions.py
src/tracker/db/models/: __init__.py
src/tracker/interceptors/: __init__.py  authentication.py  logging.py
src/tracker/migrations/: env.py
src/tracker/migrations/versions/: 2026_06_30_2207-df23ab6392ea_initial_migration.py
src/tracker/models/: __init__.py  item_audit.py
src/tracker/processors/: __init__.py  analytics.py  health.py
src/tracker/repositories/: __init__.py  analytics.py  health.py
src/tracker/services/: __init__.py  analytics.py  health.py
src/tracker/tasks/: __init__.py  item.py
src/tracker/utils/: timezone.py
